<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".CountriesFragment">

    <ImageView
        android:id="@+id/bck_btn"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:rotation="180"
        android:src="@mipmap/back" />

    <TextView
        android:id="@+id/welcome_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/welcome"
        android:textColor="#F5F5F5"
        android:textSize="20sp" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/welcome_txt"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#E1C79B"
                    android:hint="@string/mail"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/textColor" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">

                <com.marlonmafra.android.widget.EditTextPassword
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#E1C79B"
                    android:hint="@string/password"
                    android:imeActionId="6"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/textColor"
                    app:fontPath="fonts/roboto_regular.ttf"
                    app:hidePasswordIcon="@drawable/show_pass"
                    app:iconPosition="right"
                    app:showPasswordIcon="@drawable/show_pass" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/forget_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:text="@string/forgot_pass"
                android:textColor="#545456"
                android:textSize="14sp" />

            <Button
                android:id="@+id/sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rouned_view"
                android:text="@string/login"
                android:textAllCaps="false"
                android:gravity="center"
                android:textColor="#E1C79B"
                android:textStyle="bold" />

            <Button
                android:id="@+id/email_sign_in_later_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_marginRight="10dp"
                android:textAllCaps="false"
                android:layout_marginTop="16dp"
                android:background="@drawable/unactive_rouned_view"
                android:text="@string/signin_later"
                android:textColor="#545456"
                android:textStyle="bold" />


            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/no_account_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/no_account"
                android:textColor="#545456"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/register_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/reg_nw"
                android:textColor="#E1C79B"
                android:textSize="17sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>